# cpp-learning-journey

./: .gitignore  CMakeLists.txt  README.md  cpp-learning-journey.sln
Another way to make a bubble sort/: Another way to make a bubble sort.vcxproj
Another way to make a bubble sort/src/: main  main.cpp
Bubble sort algorith/: Bubble sort algorith.vcxproj
Bubble sort algorith/src/: main.cpp
Classes/src/: main.cpp
Fundamentals of Funcions/: Fundamentals of Funcions.vcxproj
Fundamentals of Funcions/src/: main.cpp
Header Files and Inlines/: Header Files and Inlines.vcxproj  Header Files and Inlines.vcxproj.filters
Header Files and Inlines/src/: main.cpp  utility.cpp  utility.h  utility.inl
Inline/: Inline.vcxproj  Inline.vcxproj.filters
Inline/src/: main.cpp  utility.cpp  utility.h  utility.inl
Matrix rain/: Matrix rain  Matrix rain.cpp  Matrix rain.vcxproj  Matrix rain.vcxproj.filters
Miles to Kilometers/: Miles to Kilometers.vcxproj
Smallest Number Finder/: Smallest Number Finder.vcxproj
Smallest Number Finder v2/: Smallest Number Finder v2.vcxproj
Structure of a c++ project/: Structure of a c++ project.vcxproj  Structure of a c++ project.vcxproj.filters
Temperature converter/: Temperature converter.vcxproj
Templates/: Templates.vcxproj
Templates_2/: Templates_2.vcxproj
WordFrequencyAnalyzer/: WordFrequencyAnalyzer.vcxproj
inheritance/: main.cpp
note picker/: note picker.vcxproj
odd OR even/: odd OR even.vcxproj
pointers/: pointers.cpp  pointers.vcxproj
shallow copy/: main.cpp
struct/: struct  struct.cpp  struct.vcxproj
(+16 files in other folders)
